--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -53,3 +53,7 @@ body {
 p {
     font-size: 1.6rem;
 }
+
+li {
+    list-style: none;
+}
