--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -54,6 +54,13 @@
         &--text {
             color: $color-grey-dark-2;
             font-weight: bold;
+            cursor: pointer;
+        }
+
+        &--item {
+            color: $color-grey-dark-3;
+            margin-bottom: 1rem;
+            opacity: 70%;
         }
     }
 
